new: estructural patterns / flyweight example 2