@@ -9,15 +9,15 @@ public class Map {
 	private static final Integer TRYS = 10;
 	private static final Integer MAP_ROWS = 10;
 	private static final Integer MAP_COLUMNS = 10;
-	
-	private Pixel[][] map;
+
+	private final Pixel[][] map;
 	private Integer trysRemaining;
-	
+
 	public Map() {
 		map = createMap();
 		trysRemaining = TRYS;
 	}
-	
+
 	private Pixel[][] createMap() {
 		Pixel[][] map = new Pixel[MAP_ROWS][MAP_COLUMNS];
 		for(int row = 0; row < map.length; row++) {
@@ -25,32 +25,32 @@ public class Map {
 				int pix = sort();
 				Pixel pixel = null;
 				switch (pix) {
-				case 0: 
-					pixel = new Pixel(PixelFactory.getInstance().getPixelType('$', 100), false);
-					break;
-				case 1: 
-					pixel = new Pixel(PixelFactory.getInstance().getPixelType('%', 50), false);
-					break;
-				case 2: 
-					pixel = new Pixel(PixelFactory.getInstance().getPixelType('X', -50), false);
-					break;
-				case 3: 
-					pixel = new Pixel(PixelFactory.getInstance().getPixelType('@', -100), false);
-					break;
-				default:
-					pixel = new Pixel(PixelFactory.getInstance().getPixelType(' ', 0), false);
-					break;
+					case 0:
+						pixel = new Pixel(PixelFactory.getInstance().getPixelType('$', 100), false);
+						break;
+					case 1:
+						pixel = new Pixel(PixelFactory.getInstance().getPixelType('%', 50), false);
+						break;
+					case 2:
+						pixel = new Pixel(PixelFactory.getInstance().getPixelType('X', -50), false);
+						break;
+					case 3:
+						pixel = new Pixel(PixelFactory.getInstance().getPixelType('@', -100), false);
+						break;
+					default:
+						pixel = new Pixel(PixelFactory.getInstance().getPixelType(' ', 0), false);
+						break;
 				}
-				map[row][column] = pixel; 
+				map[row][column] = pixel;
 			}
 		}
 		return map;
 	}
-	
+
 	public void drawMap() {
 		System.out.println("----------------");
 		System.out.print(" ");
-		for(int title = 0; title < MAP_COLUMNS; title++) 	
+		for(int title = 0; title < MAP_COLUMNS; title++)
 			System.out.print(" " + title);
 		for(int row = 0; row < map.length; row++) {
 			System.out.print("\n" + row);
@@ -62,14 +62,14 @@ public class Map {
 		}
 		System.out.println(String.format("\nYou have %d trys left", trysRemaining));
 	}
-	
+
 	public Integer openCell(String coord) {
 		if(coord.length() != 2) return 0;
 		Integer row = null;
 		Integer column = null;
 		try {
-			row = new Integer(coord.substring(0,1));
-			column = new Integer(coord.substring(1,2));			
+			row = Integer.valueOf(coord.substring(0, 1));
+			column = Integer.valueOf(coord.substring(1, 2));
 		} catch(NumberFormatException e) {
 			return 0;
 		}
@@ -81,11 +81,11 @@ public class Map {
 		}
 		return 0;
 	}
-	
+
 	public boolean isGameOver() {
 		return trysRemaining == 0;
 	}
-	
+
 	private int sort() {
 		Random r = new Random();
 		return r.nextInt(10);
